git pull.rebase false

--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -1,7 +1,7 @@
 <h2>Customers Page</h2>
 <h3>Test</h3>
 <section>
-    <table>
+    <table id="customers-table">
         <thead>
             <tr>
                 {{#each data.[0]}}
@@ -28,4 +28,37 @@
             {{/each}}
         </tbody>
     </table>
+    <h2>Add a New Customer</h2>
+    <p>Enter the Customer Information below and hit submit to add a new Customer</p>
+    <form id="add-customer-form">
+        <label for="input-fname">First Name:</label>
+        <input type="text" name="input-fname" id="input-fname"><br>
+
+        <label for="input-lname">Last Name:</label>
+        <input type="text" name="input-lname" id="input-lname"><br>
+
+        <label for="input-phone">Phone Number:</label>
+        <input type="number" name="input-phone" id="input-phone" min="1111111111" max="9999999999"><br>
+
+        <label for="input-address1">Street Address (Line 1):</label>
+        <input type="text" name="input-address1" id="input-address1"><br>
+
+        <label for="input-address2">Street Address (Line 2)</label>
+        <input type="text" name="input-address2" id="input-address2"><br>
+        
+        <label for="input-city">City:</label>
+        <input type="text" name="input-city" id="input-city"><br>
+        
+        <label for="input-state">State:</label>
+        <input type="text" name="input-state" id="input-state" maxlength="2"><br>
+
+        <label for="input-zip">ZIP Code:</label>
+        <input type="number" name="input-zip" id="input-zip" min="11111" max="99999"><br>
+
+        <label for="input-email">Email Address:</label>
+        <input type="email" name="input-email" id="input-email"><br>
+
+        <input type="submit" value="Submit" />
+    </form>
+    <script src="../public/js/add_customer.js">
 </section>
