--- a/views/product-types.hbs
+++ b/views/product-types.hbs
@@ -1,6 +1,6 @@
 <h2>Product Types Page</h2>
 <section>
-    <table>
+    <table id="product-types-table">
         <thead>
             <tr>
                 {{#each data.[0]}}
