--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -1,6 +1,6 @@
 <h2>Suppliers Page</h2>
 <section>
-    <table>
+    <table id="suppliers-table">
         <thead>
             <tr>
                 {{#each data.[0]}}
