--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Real Nice Dragons</title>
-    <link rel="stylesheet" href=".../public/main.css" media="screen" type="text/css">
+    <link rel="stylesheet" href=".../public/css/main.css" media="screen" type="text/css">
 </head>
 <header>
     <h1>Real Nice Dragons</h1>
