--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -58,7 +58,7 @@
         <label for="input-email">Email Address:</label>
         <input type="email" name="input-email" id="input-email"><br>
 
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Add Customer" />
     </form>
-    <script src="../public/js/add_customer.js">
+    <script src='./js/add_customer.js' type="application/javascript"></script>
 </section>
