Working CRUD for Customers

--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -32,31 +32,31 @@
     <p>Enter the Customer Information below and hit submit to add a new Customer</p>
     <form id="add-customer-form">
         <label for="input-fname">First Name:</label>
-        <input type="text" name="input-fname" id="input-fname"><br>
+        <input type="text" name="input-fname" id="input-fname">
 
         <label for="input-lname">Last Name:</label>
-        <input type="text" name="input-lname" id="input-lname"><br>
+        <input type="text" name="input-lname" id="input-lname">
 
         <label for="input-phone">Phone Number:</label>
-        <input type="number" name="input-phone" id="input-phone" min="1111111111" max="9999999999"><br>
+        <input type="number" name="input-phone" id="input-phone" min="1111111111" max="9999999999">
 
         <label for="input-address1">Street Address (Line 1):</label>
-        <input type="text" name="input-address1" id="input-address1"><br>
+        <input type="text" name="input-address1" id="input-address1">
 
         <label for="input-address2">Street Address (Line 2)</label>
-        <input type="text" name="input-address2" id="input-address2"><br>
+        <input type="text" name="input-address2" id="input-address2">
         
         <label for="input-city">City:</label>
-        <input type="text" name="input-city" id="input-city"><br>
+        <input type="text" name="input-city" id="input-city">
         
         <label for="input-state">State:</label>
-        <input type="text" name="input-state" id="input-state" maxlength="2"><br>
+        <input type="text" name="input-state" id="input-state" maxlength="2">
 
         <label for="input-zip">ZIP Code:</label>
-        <input type="number" name="input-zip" id="input-zip" min="11111" max="99999"><br>
+        <input type="number" name="input-zip" id="input-zip" min="11111" max="99999">
 
         <label for="input-email">Email Address:</label>
-        <input type="email" name="input-email" id="input-email"><br>
+        <input type="email" name="input-email" id="input-email">
 
         <input type="submit" value="Add Customer" />
     </form>
