--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Real Nice Dragons</title>
+    <link rel="stylesheet" href="/css/main.css" media="" type="text/css">
 </head>
 <header>
     <h1>Real Nice Dragons</h1>
