--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,8 @@
     <script src='App.js'></script>
 </head>
 <header>
-    <img class="logo" src="logo/purple-transparent-bg.png" alt="Purple Dragon">
+    <img class="logo" src="logo/purple-transparent-bg.png" alt="Purple Dragon logo">
+    <h1>Real Nice Dragons</h1>
 		<nav class="navbar">
 		<ul>
 			<li><a href="/customers">Customers</a></li>
@@ -19,12 +20,11 @@
 			<li><a href="/sales">Sales</a></li>
 		</ul>
 		</nav>
-        <h1>Real Nice Dragons</h1>
 </header>
 <body>
 
     {{{body}}}
 
 </body>
-<footer>&copy;Copyright 2023 Tyrell Verley and Megan Grant</footer>
+<footer>&copy;2023 Tyrell Verley and Megan Grant<img class="logo" src="logo/purple-transparent-bg.png" alt="Purple Dragon logo"></footer>
 </html>
