--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,11 +50,11 @@
     font-family: 'Lora', serif;
     margin:0px;
     padding: 25px;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     border-style: none;
     display: flex;
     align-items: center;
-    box-shadow: 0 0 25px var(--purpledragondark);
+    box-shadow: 0 0 15px var(--purpledragondark);
   }
 
   header * {
@@ -89,14 +89,16 @@
   div {}
   aside {}
   footer {
-    background-color:var(--greenback);
-    color:var(--eggshell);
+    background-color:var(--eggshell);
+    color:var(--purpledragon);
     font-family: 'Roboto', sans-serif;
-    margin-top:10px;
+    margin-top:20px;
     padding: 25px;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     border-style: none;
     text-align: center;
+    font-size: 1.2em;
+    box-shadow: 0 0 15px var(--purpledragondark);
   }
   
   /* ----- Anchors ----- Text links */
@@ -181,8 +183,8 @@
   /*  ----- Table ----- */
   table {
     border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 20px;
+    margin: 0 auto;
+    font-size: .8em;
     font-family: 'Roboto', sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
