--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -30,7 +30,7 @@
     </table>
     <h2>Add a New Customer</h2>
     <p>Enter the Customer Information below and hit submit to add a new Customer</p>
-    <form id="add-customer-form">
+    <form class="customer-form" id="add-customer-form">
         <label for="input-fname">First Name:</label>
         <input type="text" name="input-fname" id="input-fname">
 
