--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,6 +13,7 @@
     <h1>Real Nice Dragons</h1>
 		<nav class="navbar">
 		<ul>
+            <li><a href="/">Home</a></li>
 			<li><a href="/customers">Customers</a></li>
 			<li><a href="/products">Products</a></li>
 			<li><a href="/suppliers">Suppliers</a></li>
