Home page information

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,42 @@
 <!-- index.hbs -->
-<h1>The server is running!</h1>
-<h2>Test Change for Git</h2>
-<p>If you see this text, the server is <strong>definitely</strong> working!</p>
+<section>
+    <article>
+        <h2>Welcome to Real Nice Dragons!</h2>
+        <p>
+            This page will give you a brief overview of each of the pages that you can navigate to from this home
+            page.
+        </p>
+    </article>
+    <article>
+        <h3>Customers Page</h3>
+        <p>
+            This page displays all customer information. Additionally, from this page you can also add a new
+            customer to the database.
+        </p>
+        <h3>Products Page</h3>
+        <p>
+            This page will show you all available products to choose from. This page also displays some basic
+            information about the product type as well as each product's supplier.
+        </p>
+        <h3>Suppliers Page</h3>
+        <p>
+            This page will show you all available information about each of our suppliers.
+        </p>
+        <h3>Product Types Page</h3>
+        <p>
+            This page will show you all available information about each of our product types.
+        </p>
+        <h3>Sales Page</h3>
+        <p>
+            This page will show you all available information about each order that has been placed with
+            Real Nice Dragons.
+        </p>
+        <h3>Sales Details Page</h3>
+        <p>
+            This page will you give you all the information about each line in each order that has been placed
+            with Real Nice Dragons. This page will eventually have a search function so that the user only sees
+            information about the particular order they are looking for.
+        </p>
+    </article>
+</section>
+<h3></h3>
