--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,7 @@
 			<li><a href="/suppliers">Suppliers</a></li>
 			<li><a href="/product-types">Product Types</a></li>
 			<li><a href="/sales">Sales</a></li>
+			<li><a href="/sales-details">Sales Details</a></li>
 		</ul>
 		</nav>
 </header>
