--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='/css/main.css'>
     <script src='App.js'></script>
 </head>
-<header>
+<header class="'nav-head">
     <img class="logo" src="logo/purple-transparent-bg.png" alt="Purple Dragon logo">
     <h1>Real Nice Dragons</h1>
 		<nav class="navbar">
