Fixed some stuff

--- a/views/product-types.hbs
+++ b/views/product-types.hbs
@@ -20,4 +20,14 @@
             {{/each}}
         </tbody>
     </table>
+    <h3>Add a Product Type:</h3>
+    <form class="product-types" id="add-product-type-form">
+        <label for="input-typeName">Type Name:</label>
+        <input type="text" name="input-typeName" id="input-typeName" required>
+
+        <label for="input-typeDesc">Type Description:</label>
+        <input type="text" name="input-typeDesc" id="input-Desc" required>
+
+        <input type="submit" value="Add Product Type" />
+    </form>
 </section>
