--- a/views/sales-details.hbs
+++ b/views/sales-details.hbs
@@ -25,4 +25,22 @@
             {{/each}}
         </tbody>
     </table>
+    <h3>Add a Transaction to Order:</h3>
+    <form class="sales-details-form" id="add-sales-details-form">
+        <label for="input-order">Order:</label>
+        <select name="input-order" id="input-order" required>
+            <option value="Test">TEST</option>
+
+        </select>
+
+        <label for="input-product">Customer:</label>
+        <select name="input-product" id="input-product" required>
+            <option value="Test">TEST</option>
+
+        </select>
+
+        <label for="input-qty">Quantity:</label>
+        <input type="number" name="input-qty" id="input-qty" required>
+
+        <input type="submit" value="Add Product" />
 </section>
