--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -22,4 +22,13 @@
             {{/each}}
         </tbody>
     </table>
+    <h3>Add an Order:</h3>
+    <form class="sales-form" id="add-sales-form">
+        <label for="input-name">Date:</label>
+        <input type="date" name="input-date" id="input-date" required>
+
+        <label for="input-customer">Customer:</label>
+        <input type="number" name="input-customer" id="input-customer" required>
+
+        <input type="submit" value="Add Sales" />
 </section>
