fixed more stuff

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -50,4 +50,15 @@
 
         <input type="submit" value="Add Product" />
     </form>
+    <h3>Update a Product:</h3>
+    <form>
+        <label for="update-product">Update Product:</label>
+        <select name="update-product" id="update-product">
+            <option value="Test">Test</option>
+
+        </select>
+
+        <input type="submit" value="Add Sales" />
+    </form>
+    </form>
 </section>
