--- a/views/sales-details.hbs
+++ b/views/sales-details.hbs
@@ -43,4 +43,5 @@
         <input type="number" name="input-qty" id="input-qty" required>
 
         <input type="submit" value="Add Product" />
+    </form>
 </section>
