--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -31,4 +31,14 @@
         <input type="number" name="input-customer" id="input-customer" required>
 
         <input type="submit" value="Add Sales" />
+    </form>
+    <h3>Refund a Sale (Delete):</h3>
+    <form class="sales-form" id="delete-sales-form">
+        <label for="delete-sales">Find the Sale (By Date and Customer):</label>
+        <select name="delete-sales" id="delete-sales" required>
+            <option>Test</option>
+        </select>
+
+        <input type="submit" value="Delete Sales" />
+    </form>
 </section>
