--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -53,4 +53,5 @@
         <input type="number" name="input-zip" id="input-zip">
 
         <input type="submit" value="Add Supplier" />
+        </form>
 </section>
