fixed even more stuff

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -58,7 +58,7 @@
 
         </select>
 
-        <input type="submit" value="Add Sales" />
+        <input type="submit" value="Update Product" />
     </form>
     </form>
 </section>
