--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -28,7 +28,9 @@
         <input type="date" name="input-date" id="input-date" required>
 
         <label for="input-customer">Customer:</label>
-        <input type="number" name="input-customer" id="input-customer" required>
+        <select name="input-customer" id="input-customer">
+            <option value="Test">Test</option>
+        </select>
 
         <input type="submit" value="Add Sales" />
     </form>
