Delete functionality is working for Sales. Also deletes relevant line items from SalesDetails.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Real Nice Dragons</title>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/main.css'>
-    <script src='App.js'></script>
+    <script src='App.js' type="application/javascript"></script>
 </head>
 <header class="'nav-head">
     <img class="logo" src="logo/purple-transparent-bg.png" alt="Purple Dragon logo">
