--- a/views/products.hbs
+++ b/views/products.hbs
@@ -13,6 +13,7 @@
         <tbody>
             {{#each data}}
             <tr>
+                <td>Update</td>
                 <td>{{this.productID}}</td>
                 <td>{{this.name}}</td>
                 <td>${{this.storeCost}}</td>
