--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -28,8 +28,8 @@
     <script src="./js/delete_sale.js"></script>
 
     <h3>Add an Order:</h3>
-    <form class="add-sales-form" id="add-sales-form">
-        <label for="input-name">Date:</label>
+    <form class="add-sales-form" id="add-sales-form" method="POST" action="/add-sales">
+        <label for="input-date">Date:</label>
         <input type="date" name="input-date" id="input-date" required>
 
         <label for="input-customer">Customer:</label>
